EXTRA_DIST =  \
	Heap.cs MonoFunctionObject.cs MonoLanguageBackend.cs MonoStringType.cs \
	MonoArrayObject.cs MonoFunctionType.cs MonoObject.cs MonoStringTypeInfo.cs \
	MonoArrayType.cs MonoFunctionTypeInfo.cs MonoObjectObject.cs MonoSymbolFile.cs \
	MonoArrayTypeInfo.cs MonoFundamentalObjectBase.cs MonoObjectType.cs MonoType.cs \
	MonoClassInfo.cs MonoFundamentalObject.cs MonoObjectTypeInfo.cs MonoTypeInfo.cs \
	MonoClassObject.cs MonoFundamentalType.cs MonoOpaqueType.cs MonoVariable.cs \
	MonoClassType.cs MonoFundamentalTypeInfo.cs MonoStringObject.cs
