EXTRA_DIST =  \
	Heap.cs MonoArrayObject.cs MonoArrayType.cs MonoArrayTypeInfo.cs MonoClassInfo.cs \
	MonoClassObject.cs MonoClassType.cs MonoEnumObject.cs MonoEnumType.cs \
	MonoEnumTypeInfo.cs MonoFunctionObject.cs MonoFunctionType.cs MonoFunctionTypeInfo.cs \
	MonoFundamentalObjectBase.cs MonoFundamentalObject.cs MonoFundamentalType.cs \
	MonoFundamentalTypeInfo.cs MonoLanguageBackend.cs MonoMember.cs MonoObject.cs \
	MonoObjectObject.cs MonoObjectType.cs MonoObjectTypeInfo.cs MonoOpaqueType.cs \
	MonoStringObject.cs MonoStringType.cs MonoStringTypeInfo.cs MonoSymbolFile.cs \
	MonoType.cs MonoTypeInfo.cs MonoVariable.cs
