EXTRA_DIST = NativeFunctionObject.cs NativeFunctionType.cs NativeFundamentalObject.cs NativeFundamentalType.cs \
	NativeLanguage.cs NativeObject.cs NativeOpaqueObject.cs NativeOpaqueType.cs NativePointerObject.cs \
	NativePointerType.cs NativeStringObject.cs NativeStringType.cs NativeStructObject.cs NativeStructType.cs \
	NativeType.cs
