EXTRA_DIST = DebuggerChannel.cs DebuggerClientChannel.cs DebuggerClient.cs \
	DebuggerClientTransportSink.cs DebuggerClientTransportSinkProvider.cs \
	DebuggerConnection.cs DebuggerMessageIO.cs \
	DebuggerRemotingException.cs DebuggerServerChannel.cs DebuggerServer.cs \
	DebuggerServerDispatchSink.cs DebuggerServerDispatchSinkProvider.cs \
	DebuggerServerResponseSink.cs DebuggerServerTransportSink.cs DebuggerStream.cs
