EXTRA_DIST =  \
	MonoArrayObject.cs MonoArrayType.cs MonoClassInfo.cs MonoClassObject.cs MonoClassType.cs \
	MonoDebuggerSupport.cs MonoEnumType.cs MonoFunctionType.cs MonoGenericInstanceType.cs \
	MonoLanguageBackend.cs MonoMember.cs MonoNullObject.cs MonoObjectObject.cs MonoObjectType.cs \
	MonoOpaqueType.cs MonoPointerObject.cs MonoPointerType.cs MonoStringObject.cs \
	MonoStringType.cs MonoSymbolFile.cs MonoVariable.cs MonoVariableLocation.cs
