EXTRA_DIST = \
	ITypeEntry.cs NativeArrayObject.cs NativeArrayType.cs NativeEnumType.cs \
	NativeFunctionType.cs NativeLanguage.cs NativeOpaqueObject.cs NativeOpaqueType.cs \
	NativePointerObject.cs NativePointerType.cs NativeStringObject.cs NativeStringType.cs \
	NativeStructObject.cs NativeStructType.cs NativeTypeAlias.cs
